# stats_tm

./: README.md  license.txt  pyproject.toml  requirements.txt  setup.cfg  test.py
stats_tm/: distribution.py
stats_tm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
