[metadata]
name=stats_tm
version=1.0.3
description=package to visualize some statistical distributions and calculate their probability mass or density function along with their cumulative probability
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
packages=stats_tm
author=Timotius Marselo
author_email=timotiusmarselo@gmail.com